@@ -1,0 +1,1 @@
+ * Fix small bugs #948
