@@ -1,3 +1,6 @@
+KeePassDX(2.9.16)
+ * Fix small bugs #948
+
 KeePassDX(2.9.15)
  * Fix themes #935 #926
  * Decrease default clipboard time #934
